--- a/1.ipynb
+++ b/1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dbcb81a3",
    "metadata": {},
    "outputs": [
@@ -34,16 +34,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.”\" - Albert Einstein\n",
-      "\"“It is our choices, Harry, that show what we truly are, far more than our abilities.”\" - J.K. Rowling\n",
-      "\"“There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle.”\" - Albert Einstein\n",
-      "\"“The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.”\" - Jane Austen\n",
-      "\"“Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.”\" - Marilyn Monroe\n",
-      "\"“Try not to become a man of success. Rather become a man of value.”\" - Albert Einstein\n",
-      "\"“It is better to be hated for what you are than to be loved for what you are not.”\" - André Gide\n",
-      "\"“I have not failed. I've just found 10,000 ways that won't work.”\" - Thomas A. Edison\n",
-      "\"“A woman is like a tea bag; you never know how strong it is until it's in hot water.”\" - Eleanor Roosevelt\n",
-      "\"“A day without sunshine is like, you know, night.”\" - Steve Martin\n"
+      "“The world as we have created it is a process of our thinking. It cannot be changed without changing our thinking.” - Albert Einstein\n",
+      "“It is our choices, Harry, that show what we truly are, far more than our abilities.” - J.K. Rowling\n",
+      "“There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle.” - Albert Einstein\n",
+      "“The person, be it gentleman or lady, who has not pleasure in a good novel, must be intolerably stupid.” - Jane Austen\n",
+      "“Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.” - Marilyn Monroe\n",
+      "“Try not to become a man of success. Rather become a man of value.” - Albert Einstein\n",
+      "“It is better to be hated for what you are than to be loved for what you are not.” - André Gide\n",
+      "“I have not failed. I've just found 10,000 ways that won't work.” - Thomas A. Edison\n",
+      "“A woman is like a tea bag; you never know how strong it is until it's in hot water.” - Eleanor Roosevelt\n",
+      "“A day without sunshine is like, you know, night.” - Steve Martin\n"
      ]
     }
    ],
@@ -51,7 +51,7 @@
     "for quote in quotes:\n",
     "    text = quote.find('span', class_='text').text\n",
     "    author = quote.find('small', class_='author').text\n",
-    "    print(f'\"{text}\" - {author}')"
+    "    print(f'{text} - {author}')"
    ]
   }
  ],
