add scraping for multiple pages

--- a/1.ipynb
+++ b/1.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "d4807797",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import time\n",
+    "import csv"
    ]
   },
   {
@@ -52,6 +54,91 @@
     "    text = quote.find('span', class_='text').text\n",
     "    author = quote.find('small', class_='author').text\n",
     "    print(f'{text} - {author}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "49c70b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "page_url = \"https://quotes.toscrape.com/page/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d2c22d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for page in range(1, 6):\n",
+    "    print(f\"Scraping page {page}\")\n",
+    "\n",
+    "    response_page = requests.get(page_url + str(page))\n",
+    "    soup_page = BeautifulSoup(response_page.text, 'html.parser')\n",
+    "    quotes_page = soup_page.find_all('div', class_='quote')\n",
+    "    for quote in quotes_page:\n",
+    "        text = quote.find('span', class_='text').text\n",
+    "        author = quote.find('small', class_='author').text\n",
+    "        print(f'{text} - {author}')\n",
+    "    time.sleep(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0e5b3a3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Page = 1. Scraping Url: https://quotes.toscrape.com/page/1/\n",
+      "Page = 2. Scraping Url: https://quotes.toscrape.com/page/2/\n",
+      "Page = 3. Scraping Url: https://quotes.toscrape.com/page/3/\n",
+      "Page = 4. Scraping Url: https://quotes.toscrape.com/page/4/\n",
+      "Page = 5. Scraping Url: https://quotes.toscrape.com/page/5/\n",
+      "Page = 6. Scraping Url: https://quotes.toscrape.com/page/6/\n",
+      "Page = 7. Scraping Url: https://quotes.toscrape.com/page/7/\n",
+      "Page = 8. Scraping Url: https://quotes.toscrape.com/page/8/\n",
+      "Page = 9. Scraping Url: https://quotes.toscrape.com/page/9/\n",
+      "Page = 10. Scraping Url: https://quotes.toscrape.com/page/10/\n",
+      "Scraping Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_url = \"https://quotes.toscrape.com/page/1/\"\n",
+    "filename = \"quotes_data.csv\"\n",
+    "page_count = 1\n",
+    "\n",
+    "with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow([\"Quote\", \"Author\"])\n",
+    "\n",
+    "    while current_url:\n",
+    "        print(f\"Page = {page_count}. Scraping Url: {current_url}\")\n",
+    "        response_current = requests.get(current_url)\n",
+    "        soup_current = BeautifulSoup(response_current.text, 'html.parser')\n",
+    "        quotes_current = soup_current.find_all('div', class_='quote')\n",
+    "        for quote in quotes_current:\n",
+    "            text = quote.find('span', class_='text').text\n",
+    "            author = quote.find('small', class_='author').text\n",
+    "            writer.writerow([text, author])\n",
+    "\n",
+    "        #getting to next page\n",
+    "        next_button = soup_current.find('li', class_='next')\n",
+    "        if next_button:\n",
+    "            current_url = \"https://quotes.toscrape.com\" + next_button.find('a')['href']\n",
+    "            time.sleep(2)\n",
+    "        else:\n",
+    "            current_url = None\n",
+    "        page_count += 1\n",
+    "\n",
+    "print(\"Scraping Done\")"
    ]
   }
  ],
